--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,103 @@
   padding: 0;
 }
 
+a:link {
+  text-decoration: none;
+  color: black;
+}
+
 /*Couleurs du site*/
 body {
   font-family: "Roboto", sans-serif;
+}
+
+.entete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  box-shadow: 0px 3px grey;
+}
+
+.localisation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  height: 50px;
+  background-color: #EAEAEA;
+}
+.localisation .fa-map-marker-alt {
+  padding-right: 10px;
+}
+
+.reservation {
+  padding: 30px;
+  background-color: #F6F6F6;
+}
+.reservation h1, .reservation p {
+  text-align: center;
+}
+.reservation h1 {
+  font-size: 1.5rem;
+  padding: 2rem;
+}
+.reservation p {
+  margin-bottom: 30px;
+}
+
+.btn1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  height: 40px;
+  width: 180px;
+  margin: auto;
+  background-image: linear-gradient(to bottom, #FF79DA, #9356DC);
+  color: white;
+  border: none;
+  box-shadow: 3px 5px 5px #e2e2e2;
+}
+
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+  margin-left: 20px;
+}
+.fonctionnement .fonctionnement_choix {
+  padding-top: 30px;
+}
+.fonctionnement .fonctionnement_choix .choix {
+  display: flex;
+  border: #f2f2f2 solid 2px;
+  border-radius: 20px;
+  height: 50px;
+  width: 320px;
+  align-items: center;
+  background-color: #F6F6F6;
+  margin-bottom: 20px;
+  box-shadow: 3px 5px 5px #e2e2e2;
+}
+.fonctionnement .fonctionnement_choix .choix .nombre {
+  display: flex;
+  border-radius: 50%;
+  background-color: #9356DC;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
+  height: 20px;
+  width: 20px;
+  margin: -10px;
+}
+.fonctionnement .fonctionnement_choix .choix .icone {
+  padding: 0 20px 0px 30px;
+  font-size: 1.3rem;
+}
+.fonctionnement .fonctionnement_choix .choix .description {
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
