--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,11 @@
   margin: 0;
   padding: 0;
 }
-
+a:link 
+{ 
+ text-decoration:none; 
+ color: black;
+} 
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
 
@@ -19,3 +23,101 @@ body{
   font-family: "Roboto", sans-serif ;
 }
 
+
+.entete{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    box-shadow: 0px 3px grey;
+
+}
+.localisation{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  height: 50px;
+  background-color: #EAEAEA;
+  
+  .fa-map-marker-alt{
+    padding-right: 10px;
+  }
+  
+
+}
+
+.reservation{
+  padding: 30px;
+  background-color: #F6F6F6;
+  h1, p{
+    text-align: center;
+  }
+  h1{
+    font-size: 1.5rem;
+    padding: 2rem;
+  }
+  p{
+    margin-bottom: 30px;
+  }
+  
+}
+.btn1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  height: 40px;
+  width: 180px;
+  margin: auto;
+  background-image: linear-gradient(to bottom, $couleur_secondaire, $couleur_primaire) ;
+  color: white;
+  border: none;
+  box-shadow: 3px 5px 5px #e2e2e2;
+
+}
+
+.fonctionnement{
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+  margin-left: 20px;
+
+  .fonctionnement_choix{
+    padding-top: 30px;
+    
+
+    .choix{
+      display: flex;
+      border: #f2f2f2 solid 2px;
+      border-radius: 20px;
+      height: 50px;
+      width: 320px;
+      align-items: center;  
+      background-color: #F6F6F6;
+      margin-bottom: 20px;
+      box-shadow: 3px 5px 5px #e2e2e2;
+
+
+      .nombre{
+        display: flex;
+        border-radius: 50%;
+        background-color: $couleur_primaire;
+        color: white;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.8rem;
+        height: 20px;
+        width: 20px;
+        margin: -10px;
+      }
+      .icone{
+        padding: 0 20px 0px 30px;
+        font-size: 1.3rem;
+      }
+      .description{
+        font-weight: bold;
+      }
+   }
+  }
+}
