index.html version mobile sans effets

--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -6,3 +6,6 @@ $couleur_shadow : #dadada;
 $couleur_background : #F6F6F6;
 $couleur_police_nouveau :#3b8468;
 $couleur_fond_nouveau : #a9e0d1;
+$couleur_blanche : white;
+$couleur_background_footer : #404040;
+$couleur_btn_rose : #FAEAF0;
