--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
 .fonctionnement .fonctionnement_choix {
   padding-top: 30px;
 }
-.fonctionnement .fonctionnement_choix .choix {
+.fonctionnement .choix {
   display: flex;
   border-radius: 20px;
   height: 60px;
@@ -85,7 +85,7 @@ body {
   margin-bottom: 20px;
   box-shadow: 3px 5px 5px #dadada;
 }
-.fonctionnement .fonctionnement_choix .choix .nombre {
+.fonctionnement .choix .nombre {
   display: flex;
   border-radius: 50%;
   background-color: #9356DC;
@@ -97,12 +97,15 @@ body {
   width: 20px;
   margin: -10px;
 }
-.fonctionnement .fonctionnement_choix .choix .icone {
+.fonctionnement .choix .icone {
   padding: 0 20px 0px 30px;
   font-size: 1.3rem;
 }
-.fonctionnement .fonctionnement_choix .choix .description {
+.fonctionnement .choix .description {
   font-weight: bold;
+}
+.fonctionnement .choix--rose {
+  background-color: #FAEAF0;
 }
 
 .restaurants {
@@ -163,6 +166,19 @@ body {
 
 footer {
   background-color: #404040;
+  color: white;
+  padding: 20px;
+}
+footer .footer_omf {
+  padding-bottom: 30px;
+  font-family: Shrikhand;
+  font-size: 1.2rem;
+}
+footer .footer_click {
+  padding-bottom: 10px;
+}
+
+footer a:visited, footer a:link, footer a:active {
   color: white;
 }
 
