--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,36 +1,17 @@
 @import "./base/normalize";
 @import "./utils/variables";
+@import "./base/polices";
+@import "./Layout/header";
+@import "./Component/localisation";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
 
 
-body{
-  font-family: "Roboto", sans-serif ;
-}
 
 
-.entete{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60px;
-    box-shadow: 0px 3px grey;
 
-}
-.localisation{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
-  height: 50px;
-  background-color: #EAEAEA;
-  
-  .fa-map-marker-alt{
-    padding-right: 10px;
-  }
-  
 
-}
+
 
 .reservation{
   padding: 10px 30px 50px 30px;
@@ -45,7 +26,6 @@ body{
   p{
     margin-bottom: 30px;
   }
-  
 }
 .btn1{
   display: flex;
@@ -56,7 +36,7 @@ body{
   width: 180px;
   margin: auto;
   background-image: linear-gradient(to bottom, $couleur_secondaire, $couleur_primaire) ;
-  color: white;
+  color: $couleur_blanche;
   border: none;
   box-shadow: 3px 5px 5px $couleur_shadow;
 
@@ -70,7 +50,7 @@ body{
 
   .fonctionnement_choix{
     padding-top: 30px;
-    
+  }
 
     .choix{
       display: flex;
@@ -87,7 +67,7 @@ body{
         display: flex;
         border-radius: 50%;
         background-color: $couleur_primaire;
-        color: white;
+        color: $couleur_blanche;
         align-items: center;
         justify-content: center;
         font-size: 0.8rem;
@@ -102,7 +82,11 @@ body{
       .description{
         font-weight: bold;
       }
-   }
+   
+  }
+    .choix--rose{
+      background-color: $couleur_btn_rose;
+
   }
 }
 
@@ -126,7 +110,7 @@ body{
     
   
 .flyer{
-  background-color: white;
+  background-color: $couleur_blanche;
   border-radius: 20px;
   overflow: hidden;
   position: relative;
@@ -183,8 +167,21 @@ img{
 
 footer{
   
-  background-color: #404040;
-  color: white;
+  background-color: $couleur_background_footer;
+  color: $couleur_blanche;
+  padding: 20px;
 
+  .footer_omf{
+    padding-bottom: 30px;
+    font-family: Shrikhand;
+    font-size: 1.2rem;
+  }
 
+.footer_click{
+  padding-bottom: 10px;
+}
+
+}
+footer a:visited, footer a:link, footer a:active{
+  color: $couleur_blanche;
 }
