--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,187 +1,10 @@
 @import "./base/normalize";
 @import "./utils/variables";
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
 @import "./base/polices";
 @import "./Layout/header";
 @import "./Component/localisation";
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
-
-
-
-
-
-
-
-
-.reservation{
-  padding: 10px 30px 50px 30px;
-  background-color: $couleur_background;
-  h1, p{
-    text-align: center;
-  }
-  h1{
-    font-size: 1.5rem;
-    padding: 20px;
-  }
-  p{
-    margin-bottom: 30px;
-  }
-}
-.btn1{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 30px;
-  height: 40px;
-  width: 180px;
-  margin: auto;
-  background-image: linear-gradient(to bottom, $couleur_secondaire, $couleur_primaire) ;
-  color: $couleur_blanche;
-  border: none;
-  box-shadow: 3px 5px 5px $couleur_shadow;
-
-}
-
-.fonctionnement{
-  display: flex;
-  flex-direction: column;
-  padding: 50px 0 50px 0;
-  margin-left: 20px;
-
-  .fonctionnement_choix{
-    padding-top: 30px;
-  }
-
-    .choix{
-      display: flex;
-      border-radius: 20px;
-      height: 60px;
-      width: 320px;
-      align-items: center;  
-      background-color: $couleur_background;
-      margin-bottom: 20px;
-      box-shadow: 3px 5px 5px $couleur_shadow;
-
-
-      .nombre{
-        display: flex;
-        border-radius: 50%;
-        background-color: $couleur_primaire;
-        color: $couleur_blanche;
-        align-items: center;
-        justify-content: center;
-        font-size: 0.8rem;
-        height: 20px;
-        width: 20px;
-        margin: -10px;
-      }
-      .icone{
-        padding: 0 20px 0px 30px;
-        font-size: 1.3rem;
-      }
-      .description{
-        font-weight: bold;
-      }
-   
-  }
-    .choix--rose{
-      background-color: $couleur_btn_rose;
-
-  }
-}
-
-
-.restaurants{
-  
-  background-color: $couleur_background;
-  padding: 0px 10px 50px 10px;
-
-  h2{
-    padding: 30px 0 30px 0;
-  }
-}
-
-
-
-  .flyers{
-    display: grid;
-    row-gap: 20px;
-  }
-    
-  
-.flyer{
-  background-color: $couleur_blanche;
-  border-radius: 20px;
-  overflow: hidden;
-  position: relative;
-  box-shadow: 3px 5px 5px $couleur_shadow;
-  
-  
-  .flyer_nouveau {
-    background: $couleur_fond_nouveau;
-    color: $couleur_police_nouveau;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    padding: 5px;
-    border-radius: 5px;
-    font-weight: bold;
-    
-  }
-
-  }
-  
-  
-.flyer_photo{
-  height: 180px;
-
-img{
-  max-width: 100%;
-  object-fit: cover;
-  border-radius: 20px 20px 0 0;
-}
-}
-  .flyer_descrip{
-    position: relative;
-    padding: 20px;
-    font-size: 0.8rem;
-
-    h3{
-      padding-bottom: 10px;
-    }
-  }
-
-    .flyer_descrip_favorite{
-      position: absolute;
-      font-size: 1.5rem;
-        top: 30%;
-        left: 80%;
-    }
-  
-
-    
-
-
-
-
-
-footer{
-  
-  background-color: $couleur_background_footer;
-  color: $couleur_blanche;
-  padding: 20px;
-
-  .footer_omf{
-    padding-bottom: 30px;
-    font-family: Shrikhand;
-    font-size: 1.2rem;
-  }
-
-.footer_click{
-  padding-bottom: 10px;
-}
-
-}
-footer a:visited, footer a:link, footer a:active{
-  color: $couleur_blanche;
-}
+@import "./Pages/reservation";
+@import "./Pages/Fonctionnement.scss";
+@import "./Pages/restaurants";
+@import "./Layout/footer";
