--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 60px;
+  position: relative;
 }
 
 .localisation {
@@ -209,6 +210,65 @@ footer a:visited, footer a:link, footer a:active {
     flex-wrap: wrap;
     justify-content: space-around;
   }
+}
+.btn_vers_index {
+  position: absolute;
+  left: 15px;
+}
+.btn_vers_index .fa-arrow-left {
+  font-size: 20px;
+  color: black;
+}
+
+.photo_restaurant {
+  position: relative;
+}
+.photo_restaurant img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.nom_restaurant {
+  display: flex;
+  padding-bottom: 30px;
+  padding-left: 10px;
+}
+.nom_restaurant h1 {
+  font-family: "Shrikhand";
+  font-size: 1.8rem;
+}
+.nom_restaurant .fa-heart {
+  font-size: 25px;
+  padding-top: 10px;
+  padding-left: 40px;
+}
+
+.menu {
+  background-color: #F6F6F6;
+  border-radius: 30px;
+  position: relative;
+  margin-top: -40px;
+  padding-top: 30px;
+}
+
+.menu_sorte h2 {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 500;
+  padding-bottom: 20px;
+}
+
+.menu_contenu {
+  background-color: white;
+  border-radius: 20px;
+  position: relative;
+}
+.menu_contenu .menu_prix {
+  position: absolute;
+  top: 20%;
+  left: 70%;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
