--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,9 @@ body {
   background-color: #F6F6F6;
   padding: 0px 10px 50px 10px;
 }
+.restaurants a:visited, .restaurants footer a:link, .restaurants footer a:active {
+  color: black;
+}
 .restaurants h2 {
   padding: 30px 0 30px 0;
 }
@@ -232,43 +235,71 @@ footer a:visited, footer a:link, footer a:active {
 .nom_restaurant {
   display: flex;
   padding-bottom: 30px;
-  padding-left: 10px;
+  justify-content: space-between;
 }
 .nom_restaurant h1 {
   font-family: "Shrikhand";
-  font-size: 1.8rem;
+  font-size: 1.7rem;
 }
 .nom_restaurant .fa-heart {
   font-size: 25px;
   padding-top: 10px;
-  padding-left: 40px;
 }
 
 .menu {
   background-color: #F6F6F6;
   border-radius: 30px;
   position: relative;
-  margin-top: -40px;
-  padding-top: 30px;
+  margin-top: -70px;
+  padding: 30px 10px 30px 10px;
 }
 
 .menu_sorte h2 {
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 500;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
+  position: relative;
+}
+.menu_sorte ::after {
+  content: "";
+  width: 2.8rem;
+  height: 0.25rem;
+  background-color: #99E2D0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .menu_contenu {
   background-color: white;
   border-radius: 20px;
-  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  box-shadow: 3px 5px 5px #dadada;
+  margin: 10px 0 20px 0;
+  overflow: hidden;
 }
 .menu_contenu .menu_prix {
-  position: absolute;
-  top: 20%;
-  left: 70%;
   font-weight: bold;
+  display: flex;
+  align-items: flex-end;
+}
+
+.btn_menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  height: 60px;
+  width: 180px;
+  margin: auto;
+  background-image: linear-gradient(to bottom, #FF79DA, #9356DC);
+  color: white;
+  border: none;
+  box-shadow: 3px 5px 5px #dadada;
+  font-size: large;
 }
 
 /*# sourceMappingURL=style.css.map */
