--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,74 +8,7 @@
 @import "./Pages/Fonctionnement.scss";
 @import "./Pages/restaurants";
 @import "./Layout/footer";
+@import "./Layout/menus";
 
 
-
-.btn_vers_index{
-    position: absolute;
-    left: 15px;
-    
-    .fa-arrow-left{
-        font-size: 20px;
-        color: black;
-    }
-
-}
-
-.photo_restaurant{
-    
-    position: relative;
-
-    img{
-        height: 300px;
-        width: 100%;
-        object-fit: cover;
-    }
-}
-
-
-.nom_restaurant{
-    display: flex;
-    padding-bottom: 30px;
-    padding-left: 10px;
-    h1{
-        font-family: "Shrikhand";
-        font-size: 1.8rem;
-    }
-    .fa-heart{
-        font-size: 25px;
-        padding-top: 10px;
-        padding-left: 40px;
-    }
-}
-
-.menu{
-    background-color: $couleur_background;
-    border-radius: 30px;
-    position: relative;
-    margin-top: -40px;
-    padding-top: 30px;
-
-}
-
-.menu_sorte{
-    h2{
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: 500;
-    padding-bottom: 20px;
-    }
-}
-
-.menu_contenu{
-    background-color: $couleur_blanche;
-    border-radius: 20px;
-    position: relative;
-    .menu_prix{
-        position: absolute;
-        top: 20%;
-        left: 70%;
-        font-weight: bold;
-    }
-}
 
