--- a/scss/Layout/_menus.scss
+++ b/scss/Layout/_menus.scss
@@ -78,7 +78,12 @@
     overflow: hidden;
     
     
-    
+    .menu_plat {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        
+    }
     
     .menu_prix{
         
@@ -103,6 +108,8 @@
     box-shadow: 3px 5px 5px $couleur_shadow;
     font-size: large;
 }
+
+
   
 
 @media (min-width: 770px){
@@ -115,8 +122,9 @@
 
     }
     .fa-heart {
-        font-size: 50px;}
-}
+        font-size: 50px;
+        }
+    }   
 
     .menu{
         border-radius: 0;
@@ -141,7 +149,6 @@
             }
         }
     }
-    .menu_sorte{
-
-    }
+    .photo_restaurant img {
+        height: 400px;}
 }
