--- a/scss/Pages/_restaurants.scss
+++ b/scss/Pages/_restaurants.scss
@@ -4,7 +4,7 @@
     background-color: $couleur_background;
     padding: 0px 10px 50px 10px;
 
-    a:visited, footer a:link, footer a:active{
+    a:visited, a:link, a:active{
       color: $couleur_noire;
     }
   
@@ -56,7 +56,7 @@
     .flyer_descrip{
       position: relative;
       padding: 20px;
-      font-size: 0.8rem;
+      font-size: 0.9rem;
   
       h3{
         padding-bottom: 10px;
@@ -71,11 +71,13 @@
       }
     
       @media (min-width: 770px){
+
       .flyers {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        
-  
       }
-  }
+      .menu_plat{
+        padding-right: 10px;
+      }
+    }
