--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -10,3 +10,4 @@ $couleur_blanche : white;
 $couleur_noire : black;
 $couleur_background_footer : #404040;
 $couleur_btn_rose : #FAEAF0;
+$couleur_hover_btn : #b9b9b9;
