--- a/scss/Layout/_menus.scss
+++ b/scss/Layout/_menus.scss
@@ -107,6 +107,11 @@
     border: none;
     box-shadow: 3px 5px 5px $couleur_shadow;
     font-size: large;
+
+    &:hover{
+        opacity: 0.9;
+        box-shadow: 3px 5px 5px $couleur_hover_btn;
+      }
 }
 
 
