--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,10 @@ body {
   color: white;
   border: none;
   box-shadow: 3px 5px 5px #dadada;
+  transition: opacity 500ms;
 }
 .btn1:hover {
-  opacity: 0.9;
+  opacity: 0.85;
   box-shadow: 3px 5px 5px #b9b9b9;
 }
 
@@ -319,9 +320,10 @@ footer a:visited, footer a:link, footer a:active {
   border: none;
   box-shadow: 3px 5px 5px #dadada;
   font-size: large;
+  transition: opacity 500ms;
 }
 .btn_menu:hover {
-  opacity: 0.9;
+  opacity: 0.85;
   box-shadow: 3px 5px 5px #b9b9b9;
 }
 
