--- a/scss/Pages/_reservation.scss
+++ b/scss/Pages/_reservation.scss
@@ -24,10 +24,10 @@
     color: $couleur_blanche;
     border: none;
     box-shadow: 3px 5px 5px $couleur_shadow;
-
+    transition: opacity 500ms;
 
     &:hover{
-      opacity: 0.9;
+      opacity: 0.85;
       box-shadow: 3px 5px 5px $couleur_hover_btn;
     }
   }
