--- a/css/style.css
+++ b/css/style.css
@@ -394,5 +394,71 @@ footer a:visited, footer a:link, footer a:active {
     height: 100%;
   }
 }
+.loader {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(to bottom, #FF79DA, #9356DC);
+  position: fixed;
+  z-index: 200;
+  animation: apparition 0.2s 3s ease-in-out normal forwards;
+}
+
+@keyframes apparition {
+  from {
+    opacity: 100%;
+  }
+  to {
+    opacity: 0%;
+    visibility: hidden;
+  }
+}
+.loader_titre {
+  font-family: "Shrikhand";
+  color: white;
+  font-size: 2rem;
+  letter-spacing: 3px;
+  padding-bottom: 50px;
+}
+
+.LoaderBalls {
+  width: 180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.LoaderBalls__item1 {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #9356DC;
+  animation: balles 0.5s alternate infinite cubic-bezier(0.6, 0.05, 0.15, 0.95);
+}
+.LoaderBalls__item2 {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #FF79DA;
+  animation: balles 0.3s alternate infinite cubic-bezier(0.6, 0.05, 0.15, 0.95);
+}
+.LoaderBalls__item3 {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #99E2D0;
+  animation: balles 0.4s alternate infinite cubic-bezier(0.6, 0.05, 0.15, 0.95);
+}
+
+@keyframes balles {
+  0% {
+    transform: translate3d(0, 10px, 0) scale(1.2, 0.85);
+  }
+  100% {
+    transform: translate3d(0, -20px, 0) scale(0.9, 1.1);
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
