--- a/scss/Pages/_restaurants.scss
+++ b/scss/Pages/_restaurants.scss
@@ -1,4 +1,4 @@
-
+/*Mise en forme de la partie restaurant avec photos et lien vers page dédiée au clic sur photo*/
 .restaurants{
   
     background-color: $couleur_background;
