--- a/scss/Pages/_reservation.scss
+++ b/scss/Pages/_reservation.scss
@@ -1,3 +1,5 @@
+/*Mise en forme de la partie réservation*/
+
 .reservation{
     padding: 10px 30px 50px 30px;
     background-color: $couleur_background;
@@ -12,6 +14,8 @@
       margin-bottom: 30px;
     }
   }
+
+  /*Style du bouton explorer nos restaurants avec son effet au survol */
   .btn1{
     display: flex;
     align-items: center;
